--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,7 +9,7 @@
     "@mui/material": "^6.1.2",
     "@refinedev/antd": "^5.43.1",
     "@refinedev/cli": "^2.16.21",
-    "@refinedev/core": "^4.54.1",
+    "@refinedev/core": "^4.55.0",
     "@refinedev/devtools": "^1.1.32",
     "@refinedev/kbar": "^1.3.6",
     "@refinedev/mui": "^5.21.0",
@@ -17,8 +17,9 @@
     "@refinedev/react-router-v6": "^4.6.0",
     "@refinedev/react-table": "^5.6.6",
     "@refinedev/simple-rest": "^5.0.8",
-    "@tanstack/react-query": "^5.59.0",
+    "@tanstack/react-query": "^5.59.15",
     "@tanstack/react-table": "^8.2.6",
+    "@testing-library/dom": "^10.4.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
@@ -29,16 +30,27 @@
     "react-router-dom": "^6.8.1"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.25.8",
+    "@babel/preset-react": "^7.25.7",
+    "@testing-library/jest-dom": "^6.6.1",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/jest": "^29.5.13",
     "@types/node": "^18.16.2",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/testing-library__react": "^10.2.0",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
-    "@vitejs/plugin-react": "^4.0.0",
+    "@vitejs/plugin-react": "^4.3.2",
     "autoprefixer": "^10.4.20",
+    "babel-jest": "^29.7.0",
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13",
     "typescript": "^5.4.2",
@@ -48,7 +60,8 @@
     "dev": "refine dev",
     "build": "tsc && refine build",
     "start": "refine start",
-    "refine": "refine"
+    "refine": "refine",
+    "test": "jest --watch"
   },
   "browserslist": {
     "production": [
