--- a/Frontend/tsconfig.json
+++ b/Frontend/tsconfig.json
@@ -14,7 +14,9 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "types": ["@testing-library/jest-dom", "jest", "node"]
+
   },
   "include": ["src"],
   "references": [
