--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,7 +11,8 @@
   "keywords": [],
   "description": "",
   "dependencies": {
-    "@prisma/client": "^5.20.0",
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@prisma/client": "^5.22.0",
     "@types/node": "^22.7.5",
     "@types/pg": "^8.11.10",
     "bcrypt": "^5.1.1",
@@ -19,17 +20,25 @@
     "cookieparser": "^0.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.21.0",
+    "express": "^4.21.1",
+    "ffmpeg": "^0.0.4",
+    "fluent-ffmpeg": "^2.1.3",
     "jsonwebtoken": "^9.0.2",
-    "pg": "^8.13.0"
+    "multer": "^1.4.5-lts.1",
+    "path": "^0.12.7",
+    "pg": "^8.13.0",
+    "sharp": "^0.33.5",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/fluent-ffmpeg": "^2.1.27",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/multer": "^1.4.12",
     "nodemon": "^3.1.7",
-    "prisma": "^5.20.0",
+    "prisma": "^5.22.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
   }
