--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -7,6 +7,7 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.2",
+    "@react-spring/web": "^9.7.5",
     "@refinedev/antd": "^5.43.1",
     "@refinedev/cli": "^2.16.21",
     "@refinedev/core": "^4.55.0",
@@ -23,11 +24,15 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
+    "framer-motion": "^12.0.0-alpha.0",
     "lucide-react": "^0.447.0",
     "react": "^18.0.0",
+    "react-awesome-reveal": "^4.2.14",
     "react-dom": "^18.0.0",
     "react-query": "^3.39.3",
-    "react-router-dom": "^6.8.1"
+    "react-router-dom": "^6.8.1",
+    "react-spring": "^9.7.4",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.25.8",
